--- a/editaveis/conclusao.tex
+++ b/editaveis/conclusao.tex
@@ -9,9 +9,7 @@
   software, foram de fundamental import\^{a}ncia para a execução do projeto, entre eles, as entrevistas, que por ser uma técnica tradicional e
   já conhecida e praticada por todos, foi fundamental para entender o contexto, as necessidades do cliente e o problema, tudo isso de forma
   direta, o brainstormings que também ajudou bastante a equipa elaborar ideias para o produto, tendo como principal objetivo, gerar ideias sem
-  julgamento inicial, e a prototipação que infelizmente não tivemos tempo de faze-lo porém nas próprias entrevistas já deixamos claro essa
-  possibilidade de o protótipo ou produto final não ser entregue por completo devido ao tempo de desenvolvimento ser curto e que pode existir a
-  possibilidade da equipe continuar o projeto após a execução da disciplina.
+  julgamento inicial, e a prototipação que é o desenvolvimento rápido de um sistema para validação do cliente.
 
 \section{Experiência de Execução do Trabalho}
 
@@ -20,13 +18,11 @@
   satisfaça, também foi notável a real dificuldade de lidar com variáveis não controladas, como características culturais, sociais,
   econômicas, humor, profissionalismo entre outras.
 
-
   O entendimento do problema é o primeiro passo para uma boa elicitação dos requisitos, sem saber o real problema não tem como satisfazer as
   necessidades do cliente, e isso foi uma dificuldade pois a equipe nunca teve contato nenhum com a área de geologia e no começo ninguém
   entendia nada do que o cliente queria, pois se tratava de um produto que seria específico para as necessidades daquele cliente, então tivemos
   que estudar um pouco sobre geologia e entender de fato o problema que eles queriam resolver e a empresa nos ajudou bastante a entender o
   contexto na qual eles estavam trabalhando e qual o problema eles tinham em mente.
-
 
   No início a equipe estava completamente perdida, pois o conhecimento da engenharia de requisitos não era claro o suficiente para colocar em
   prática, devido a isso tivemos duas reuniões improdutivas na qual focamos o problema errado, porém com o decorrer do semestre os conceitos e
@@ -38,7 +34,6 @@
   A elicitação incorreta dos requisitos pode ser de fato o maior problema dentro de um projeto e isso pode custar caro e até mesmo inviabilizar
   o projeto por completo, pois tendo os requisitos incompletos ou que não satisfaçam as reais necessidades do cliente pode fazer com que o
   produto não sirva para nada e além de perder o cliente o prejuízo financeiro será notável.
-
 
   A disciplina de engenharia de requisitos foi de fundamental import\^{a}ncia para compreender que essa área além de ser a área mais importante
   dentro de um projeto ela não é tão simples como aparenta ser, a ideia inicial que se tem de coletar requisitos é de que em uma entrevista a
