--- a/editaveis/gerencia.tex
+++ b/editaveis/gerencia.tex
@@ -388,7 +388,7 @@
     \begin{itemize}
       \item Cada usuário pode excluir ou alterar apenas projetos que ele mesmo criou, para ter esse tipo de acesso a outros projetos é necessário que o administrador dê essa permissão ao usuário comum.
       \item Para o administrador deve existir um menu que não aparece para os usuários.
-      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opçoẽs de gerência, como autorizar.
+      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opções de gerência, como autorizar.
       \item Ao clicar em autorizar deve aparecer uma janela com os projetos, que deve ser filtrada pelo nome. Ao digitar parte do nome dos projetos já deve aparecer sugestões de projeto.
     \end{itemize}
 
@@ -441,7 +441,7 @@
       \item É necessário estar logado com uma conta de administrador. 
       \item O administrador deverá conseguir deletar qualquer conta que possua um nível de permissão abaixo de administrador.
       \item Para o administrador deve existir um menu que não aparece para os usuários.
-      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opçoẽs de gerência, como deletar.
+      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opções de gerência, como deletar.
       \item Ao clicar em deletar deve aparecer uma janela de confirmação, garantido que um usuário seja deletado por acaso.
       \item Caso um usuário seja deletado seus projetos continuam como estão.
     \end{itemize}
@@ -459,7 +459,7 @@
     \begin{itemize}
       \item É necessário estar logado com uma conta de administrador. 
       \item Para o administrador deve existir um menu que não aparece para os usuários.
-      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opçoẽs de gerência, como acompanhar.
+      \item No menu de administrador, é possível visualizar os usuários. Ao clicar no usuário deve aparecer as opções de gerência, como acompanhar.
       \item Acompanhar deve possuir um histórico de navegação do aplicativo, com horas e datas de alteração dos arquivos.
     \end{itemize}
 
